Add basic structure for personal profile webpage

--- a/index.html
+++ b/index.html
@@ -1,1 +1,45 @@
-
+<!DOCTYPE html>
+<html>
+    <head>  
+        <title> My Personal Profile </title>
+        <meta charset="utf-8">
+        <style>
+          h1{
+            color: viiolet;
+          }
+        </style>
+        <link rel= "stylesheet" type= "text/css" href= "css/style.css">
+    </head>
+    <body>
+        <div id = "divmaincontainer">
+            <header id= "siteheader">
+              <h1 id="sitetitle "> My Personal Website</h1>
+              <span id= "sitemotto"> Inspired to make the world a better for all </span>
+            </header>
+          <nav id ="sitenav">
+            <ul id ="ulnav">
+              <li><a href="#">Home </a></li>
+              <li><a href="#">Education </a></li>
+              <li><a href="#">Experience</a></li>
+              <li><a href="#">Projects</a></li>
+              <li><a href="#">Hobbies </a></li>
+              <li><a href="#">Research </a></li>
+              <main id="Maincontent">
+                <section>
+                  <h1>Personal Details</h1>
+                  <p>My name is Lethabo Donald Oagile, I'm currently a student at BAC persuing an honers degree in Applied Business Computing</p>
+                </section>
+                <article>
+                  <p></p>
+                </article>
+              </main>
+              <footer>
+                <p>Copyright@2026-Donald</p>
+                <hr>
+                
+              </footer>
+            </ul>
+            
+          </nav>
+    </body>
+</html>
