--- a/hobbies.html
+++ b/hobbies.html
@@ -8,6 +8,15 @@
   <body>
     <div id="divcontainer">
       <h1> My Hobbies</h1>
+      <h2> My Favorite Car Brands</h2>
+      <details>
+        <summary> Koenigsegg </summary>
+        <ul>
+          <li> Agera
+            <img src="images/cars/koenigsegg-agera.jpg"  />
+          </li>
+        </ul>
+      </details>
     </div>
   </body>
 </html>
