--- a/hobbies.html
+++ b/hobbies.html
@@ -15,6 +15,9 @@
           <li> Agera
             <img src="images/cars/koenigsegg-agera.jpg"  />
           </li>
+          <li>Jesko
+            <img src="images/cars/koenigsegg-agera.jpg"  />
+          </li>
         </ul>
       </details>
     </div>
