--- a/hobbies.html
+++ b/hobbies.html
@@ -20,6 +20,28 @@
           </li>
         </ul>
       </details>
+      <details>
+        <summary> Koenigsegg </summary>
+        <ul>
+          <li> Agera
+            <img src="images/cars/koenigsegg-agera.jpg"  />
+          </li>
+          <li>Jesko
+            <img src="images/cars/koenigsegg-agera.jpg"  />
+          </li>
+        </ul>
+      </details>
+      <details>
+        <summary> Koenigsegg </summary>
+        <ul>
+          <li> Agera
+            <img src="images/cars/koenigsegg-agera.jpg"  />
+          </li>
+          <li>Jesko
+            <img src="images/cars/koenigsegg-agera.jpg"  />
+          </li>
+        </ul>
+      </details>
     </div>
   </body>
 </html>
