--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
           h1{
             color: viiolet;
           }
+            background{color:blue; }
         </style>
         <link rel= "stylesheet" type= "text/css" href= "css/style.css">
     </head>
