--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
             color: viiolet;
           }
         </style>
-        <link rel= "stylesheet" type= "text/css" href= "css/Style.css">
+        <link rel= "stylesheet" type= "text/CSS" href= "CSS/Style.css">
     </head>
     <body>
         <div id = "divmaincontainer">
