Fix spelling of 'honors' in personal details

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
               <main id="Maincontent">
                 <section>
                   <h1>Personal Details</h1>
-                  <p>My name is Lethabo Donald Oagile, I'm currently a student at BAC persuing an honers degree in Applied Business Computing</p>
+                  <p>My name is Lethabo Donald Oagile, I'm currently a student at BAC persuing an honors degree in Applied Business Computing</p>
                 </section>
                 <article>
                   <p></p>
